# makemake

./: Cargo.toml  README.md  build.rs  setup_hooks.sh
.github/workflows/: rust.yml
.hooks/: pre-commit
examples/: c_project.rs  main.c  sed.rs
examples/src/: hello.c
src/: assignment.rs  conditional.rs  directive.rs  emittable.rs  emitter.rs  expr.rs  function.rs  lib.rs  makefile.rs  misc.rs  prelude.rs  rrc.rs  rule.rs  symbol_context.rs  var.rs
src/snapshots/: makemake__tests__example.snap
