[package]
name = "makemake"
version = "0.1.2-patch2"
edition = "2021"
authors = ["Ethan Uppal"]
repository = "https://github.com/ethanuppal/makemake"
description = "Library for building Makefiles programmatically"
license = "MIT"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lib]
doctest = false

[dependencies]
insta = "1.39.0"
paste = "1.0.15"

[[example]]
name = "c_project"
path = "examples/c_project.rs"

[build-dependencies]
cargo_toml = "0.20.3"
