[package]
name = "makemake"
version = "0.1.4-patch1"
edition = "2021"
authors = ["Ethan Uppal"]
repository = "https://github.com/ethanuppal/makemake"
description = "Library for building Makefiles programmatically"
license = "LGPL-3.0-or-later"

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]

[lib]
doctest = false

[dependencies]
cargo_toml = "0.20.4"
insta = "1.39.0"
paste = "1.0.15"

[[example]]
name = "c_project"
path = "examples/c_project.rs"

[build-dependencies]
cargo_toml = "0.20.4"
